--- a/src/components/StylistService/StylistService.module.scss
+++ b/src/components/StylistService/StylistService.module.scss
@@ -19,3 +19,21 @@
         }
     }
 }
+
+.collapse {
+    background: transparent;
+    .collapseItem {
+        border: none;
+
+        :global(.ant-collapse-header) {
+            color: $font-color;
+            font-size: 1.2em;
+        }
+
+        :global(.ant-collapse-content) {
+            p {
+                color: $font-color-gray;
+            }
+        }
+    }
+}
